fix: video width on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -645,7 +645,7 @@
     }
 
     .video {
-        width: fit-content;
+        width: 100%;
     }
 
 /* || KONTAKT */
